syntax = "proto2";

package proto;

/*

message Person {
    optional string name = 1;
    optional int32 id = 2;
    optional string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        optional string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }

    repeated PhoneNumber phones = 4;
}

message AddressBook {
    repeated Person people = 1;
}

*/

message Message {
    enum State {
        INIT_MULTIPLAYER = 0;
        JOIN = 1;
    }
    required State cur_state = 1;

    message InitMultiplayerState {
        optional string code = 1;
    }

    message JoinState {
        optional string code = 1;
    }

    optional InitMultiplayerState init_multiplayer_state = 2;
    optional JoinState join_state = 3;
}
